@@ -1,3 +1,4 @@
+    - support embedded variables in objects (Monte)
     - fix bug with objects with no properties (M Mohr, Monte)
     - support full dollar var syntax in quoted text (Monte)
     - fixed bug in $smarty.const.FOO introduced in 2.4.1 (M
